--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mycompany.app</groupId>
-  <artifactId>my-webapp</artifactId>
+  <artifactId>JavaSchoolTask</artifactId>
   <packaging>war</packaging>
   <version>1.0</version>
-  <name>my-webapp Maven Webapp</name>
+  <name>JavaSchoolTask Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -16,6 +16,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>my-webapp</finalName>
+    <finalName>JavaSchoolTask</finalName>
   </build>
 </project>
